--- a/main.css
+++ b/main.css
@@ -2,8 +2,6 @@ html, body {
     padding:0px;
     margin:0px;
     font-family: 'Silkscreen', cursive;
-    overflow-y: hidden;
-    overflow-x: hidden;
 }
 
 body {
@@ -12,22 +10,34 @@ body {
     align-items: center;
     background-color: aqua;
     color:orange;
+    height:100vh;
+}
+a.no-style:link {
+    text-decoration: inherit;
+    color: inherit;
 }
 
+a.no-style:visited {
+    text-decoration: inherit;
+    color: inherit;
+}
 h1 {
     font-size: 72pt;
     -webkit-text-stroke: 1px darkgoldenrod;
     text-shadow: 3px 3px #000;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 header {
     flex: auto 0 0;
 }
 content {
-    height: 70vh;
+    flex: 1 0 70vh;
+    max-width: 80vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: stretch;
 }
 
 .question-line {
@@ -38,6 +48,7 @@ content {
 
 .text-input {
     border: 2px solid gray;
+    min-width: 30vw;
     border-radius: 5px;
     padding: 20px;
     background-color: #efefef;
@@ -54,22 +65,52 @@ content {
 }
 
 .go-button-wrapper {
-    width:30px;
+    width: 55px;
     margin-left: 10px;
+    
 }
-.go-button {
-    font-size: 32pt;
-    -webkit-text-stroke: 1px darkgoldenrod;
-    text-shadow: 3px 3px #000;
+.go.button {
     letter-spacing: -5pt;
-    cursor: pointer;
-    transition: padding-left 0.3s,
-                letter-spacing 0.2s;
     padding-left: 0px;
 }
-.go-button:hover {
+.button {
+    width:75px;
+    height: 100%;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 32pt;
+    color: #3f3f3f;
+    cursor: pointer;
+    transition: padding 0.3s,
+                letter-spacing 0.2s,
+                left 0.2s,
+                top 0.2s,
+                box-shadow 0.2s;
+    background-color: orange;
+    box-shadow:  3px 3px 5px 0px #00000080;
+    border-radius: 5px;
+    border: 2px solid darkgoldenrod;
+    position:relative;
+}
+.go.button:hover {
     padding-left: 10px;
     letter-spacing:-10pt;
+    
+}
+.button:hover {
+    box-shadow: 1px 1px 5px 0px #00000080;
+    top: 2px;
+    left: 2px;
+}
+
+.bubble-wrapper {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    z-index: -1;
 }
 
 .bubble {
@@ -80,23 +121,27 @@ content {
     width:100px;
     height: 100px;
     position: absolute;
-    top:0px;
-    z-index: -1;
 }
 screen {
     display: block;
+    flex: auto 1 1;
 }
 screen#feeding{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+}
+.search-wrapper {
+    height:100px;
 }
 .search {
     display: block;
     position: absolute;
     transform: translate(-50%, 0); 
-    font-size: 40px;
+    font-size: 20px;
     transition: opacity 0.5s;
+    text-align: center;
 }
 
 screen#answer {
@@ -108,8 +153,9 @@ screen#answer {
 #video-answer {
     max-height: 50vh;    
 }
-.video-answer-question {
-    font-size: 20pt;
+.video-answer-question,
+.feeding-question {
+    font-size: 40px;
     margin-bottom: 10px;
 }
 .video-answer-wrapper {
