--- a/main.css
+++ b/main.css
@@ -41,14 +41,20 @@ content {
 }
 .question-intro {
     text-align: center;
-    margin-bottom: 75px;
+    margin-bottom: 20px;
 }
 
-.question-line {
+.line {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    width:100%;
+    justify-content: space-evenly;
+    align-items: stretch;
+    width: 100%;
+}
+
+.line.vspace{
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .text-input {
@@ -77,14 +83,7 @@ content {
     margin-left: 10px;
     
 }
-.go.button {
-    letter-spacing: -5pt;
-    padding-left: 0px;
-    font-size: 32pt;
-}
-.back.button {
-    padding: 5px;
-}
+
 .button {
     min-width:75px;
     height: 100%;
@@ -97,23 +96,35 @@ content {
                 left 0.3s,
                 top 0.3s,
                 box-shadow 0.3s;
-    background-color: orange;
+    background-color: #efefef;
     box-shadow:  3px 3px 5px 0px #00000050;
     border-radius: 5px;
-    border: 2px solid darkgoldenrod;
+    border: 2px solid gray;
     position:relative;
     left: 0px;
     top: 0px;
+    padding: 5px;
 }
-.go.button:hover {
-    padding-left: 10px;
-    letter-spacing:-10pt;   
+.button.primary {
+    background-color: orange;
+    border-color: darkgoldenrod;
 }
 .button:hover {
     box-shadow: 1px 1px 5px 0px #00000050;
     top: 2px;
     left: 2px;
 }
+.go.button {
+    letter-spacing: -5pt;
+    padding: 0px;
+    padding-left: 0px;
+    font-size: 32pt;
+}
+.go.button:hover {
+    padding-left: 10px;
+    letter-spacing:-10pt;   
+}
+
 
 .bubble-wrapper {
     position: fixed;
