--- a/web/src/App.css
+++ b/web/src/App.css
@@ -15,6 +15,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 a.no-style:link {
@@ -30,8 +32,8 @@ h1 {
   font-size: 60pt;
   -webkit-text-stroke: 1px darkgoldenrod;
   text-shadow: 3px 3px #000;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 header {
   flex: auto 0 0;
@@ -53,7 +55,7 @@ content {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: stretch;
+  align-items: center;
   width: 100%;
 }
 
@@ -139,8 +141,11 @@ screen#answer {
   border: 5px solid darkgoldenrod;
   background-color: black;
   overflow: hidden;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.text-align-center {
+  text-align: center;
 }
 .video-answer-side {
   height:100%;
@@ -190,8 +195,8 @@ screen#answer {
 @media screen and (max-height: 600px) {
   h1 {
       font-size: 30pt;
-      margin-top: 10px;
-      margin-bottom: 10px;
+      margin-top: 5px;
+      margin-bottom: 5px;
   }
   body {
       font-size: 12pt;
@@ -223,5 +228,16 @@ screen#answer {
   .line .button {
       margin-top: 10px;
       margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-device-width: 480px) {
+  .hide-mobile {
+    display: none;
+  }
+}
+@media screen and (min-device-width:480px) {
+  .only-mobile {
+    display: none;
   }
 }
