--- a/web/src/components/button.css
+++ b/web/src/components/button.css
@@ -1,10 +1,16 @@
 .button-wrapper {
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   .button {
     min-width:75px;
-    height: 100%;
+    height: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
     text-align: center;
     color: #3f3f3f;
